--- a/avod/configs/pyramid_cars_with_aug_example.config
+++ b/avod/configs/pyramid_cars_with_aug_example.config
@@ -124,22 +124,23 @@ train_config {
 eval_config {
     eval_interval: 1000
     eval_mode: 'val'
-    ckpt_indices: -1
-    evaluate_repeatedly: True
+    #ckpt_indices: -1
+    ckpt_indices: 83
+    evaluate_repeatedly: False
 
     allow_gpu_mem_growth: True
 }
 
 dataset_config {
-    name: 'kitti'
+    name: 'moose'
 
-    # dataset_dir: '~/Kitti/object'
-    # data_split: 'train'
+    dataset_dir: '/media/wavelab/d3cd89ab-7705-4996-94f3-01da25ba8f50/moosey'
+    data_split: 'val'
 
     data_split_dir: 'training'
     has_labels: True
 
-    cluster_split: 'train'
+    cluster_split: 'val'
     classes: ['Car']
     num_clusters: [2]
 
